Dodati dijagrame obrazaca uporabe

--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -228,7 +228,7 @@
 \noindent \underbar{\textbf{UC8 - Registracija}}
 \begin{packed_item}
 	
-	\item \textbf{Glavni sudionik: } Klijent
+	\item \textbf{Glavni sudionik: } Korisnik
 	\item  \textbf{Cilj:}Stvorit korisnicki račun za pristup serveru
 	\item  \textbf{Sudionici:} Baza podataka
 	\item  \textbf{Preduvjet:} -
@@ -258,4 +258,35 @@
 
 
 \subsubsection{Dijagrami obrazaca uporabe}
+
+
+% TODO: \usepackage{graphicx} required
+\begin{figure}
+	\centering
+	\includegraphics[width=1\linewidth,height=0.7\textheight]{../../../fer/5.semestar/progi/Projekt/dijagrami/dijagramKlijent}
+	\caption{ Dijagram obrasca uporabe, funkcionalnost korisnika i klijenta}
+	\label{fig:dijagramklijent}
+	
+\end{figure}
+
+% TODO: \usepackage{graphicx} required
+\begin{figure}
+	\centering
+	\includegraphics[width=1\linewidth]{../../../fer/5.semestar/progi/Projekt/dijagrami/dijagramVoditelj}
+	\caption{Dijagram obrasca uporabe, funkcionalnost vlasnika}
+	\label{fig:dijagramvoditelj}
+\end{figure}
+
+% TODO: \usepackage{graphicx} required
+\begin{figure}
+	\centering
+	\includegraphics[width=1\linewidth]{../../../fer/5.semestar/progi/Projekt/dijagrami/dijagramAdmin}
+	\caption{Dijagram obrasca uporabe, funkcionalnost administratora}
+	\label{fig:dijagramadmin}
+\end{figure}
+
+
+
+
+
 	
