--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -270,7 +270,8 @@
 % TODO: \usepackage{graphicx} required
 \begin{figure}
 	\centering
-%	\includegraphics[width=1\linewidth,height=0.7\textheight]{../../../fer/5.semestar/progi/Projekt/dijagrami/dijagramKlijent}
+%	"E:\PROGI\PROGI_MAIN\PROGI_TIM\Dokumentacija\dijagrami\dijagramKlijent.jpg"
+	\includegraphics[width=1\linewidth,height=0.7\textheight]{dijagrami/dijagramKlijent.jpg}
 	\caption{ Dijagram obrasca uporabe, funkcionalnost korisnika i klijenta}
 	\label{fig:dijagramklijent}
 	
@@ -279,7 +280,7 @@
 % TODO: \usepackage{graphicx} required
 \begin{figure}
 	\centering
-%	\includegraphics[width=1\linewidth]{../../../fer/5.semestar/progi/Projekt/dijagrami/dijagramVoditelj}
+	\includegraphics[width=1\linewidth]{dijagrami/dijagramVoditelj}
 	\caption{Dijagram obrasca uporabe, funkcionalnost vlasnika}
 	\label{fig:dijagramvoditelj}
 \end{figure}
@@ -287,7 +288,7 @@
 % TODO: \usepackage{graphicx} required
 \begin{figure}
 	\centering
-%	\includegraphics[width=1\linewidth]{../../../fer/5.semestar/progi/Projekt/dijagrami/dijagramAdmin}
+	\includegraphics[width=1\linewidth]{dijagrami/dijagramAdmin}
 	\caption{Dijagram obrasca uporabe, funkcionalnost administratora}
 	\label{fig:dijagramadmin}
 \end{figure}
@@ -305,7 +306,7 @@
 % TODO: \usepackage{graphicx} required
 \begin{figure}
 	\centering
-%	\includegraphics[width=1\linewidth]{"../../../fer/5.semestar/progi/Projekt/dijagrami/UC1 - Pregled dostupnih parkirališta"}
+	\includegraphics[width=1\linewidth]{"dijagrami/UC1 - Pregled dostupnih parkirališta"}
 	\caption{Sekvencijski dijagram za UC1}
 	\label{fig:uc1---pregled-dostupnih-parkiralista}
 \end{figure}
@@ -319,7 +320,7 @@
 % TODO: \usepackage{graphicx} required
 \begin{figure}
 	\centering
-%	\includegraphics[width=1\linewidth]{"../../../fer/5.semestar/progi/Projekt/dijagrami/UC2 - Rezervacija Parkirališta"}
+	\includegraphics[width=1\linewidth]{"dijagrami/UC2 - Rezervacija Parkirališta"}
 	\caption{Sekvencijski dijagram za UC2}
 	\label{fig:uc2---rezervacija-parkiralista}
 \end{figure}
