Uređena struktura i dodavanje poglavlja Arhitektura

--- a/Dokumentacija/Opis_projektnog_zadatka.tex
+++ b/Dokumentacija/Opis_projektnog_zadatka.tex
@@ -13,7 +13,10 @@
 	\item {IBAN}
 	\item {email adresa}
 \end{packed_item}
-%\end{packed_item}
+Administrator može vidjeti popis svih registriranih korisnika i njihovih osobnih podataka te im mijenjati osobne podatke. Registracija se završava potvrdom preko email adrese. a ako se korisnik registrirao kao voditelj dodatno ga mora potvrditi administrator
+
+
+
 
 \eject
 
