--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -1,3 +1,8 @@
+
+\chapter{Specifikacija programske potpore}
+
+\subsection{Funkcionalni zahtjevi}
+
 \subsection{Obrasci uporabe}
 
 
@@ -325,5 +330,11 @@
 	\label{fig:uc2---rezervacija-parkiralista}
 \end{figure}
 
+
+
+\subsection{Obrasci uporabe}
+
+
+\eject
 
 	
