Dodati ostale zahtjeve

--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -13,6 +13,16 @@
 	\hline
 	\textbf{Rev.} & \textbf{Opis promjene/dodatka}	&  	\textbf{Autori}  & \textbf{Datum}	\\ \hline
 	0.1	& Napravljen predložak & Mario Olčar  & 22.10.2023	\\ \hline 
+	\\ \hline
+	0.2	& Dodani opisi obrazaca uporabe & Paula Močinić  & 8.11.2023	\\ \hline 
+	\\ \hline
+	0.3	& Dodani dijagrami obrazaca uporabe & Paula Močinić  & 8.11.2023	\\ \hline 
+	\\ \hline
+	0.4	& Dodani sekvencijski dijagrami i njihovi opisi & Paula Močinić  & 9.11.2023	\\ \hline
+	\\ \hline
+	0.5	& Stvorena mapa sa slikama dijagrama & Paula Močinić  & 12.11.2023	\\ \hline
+	\\ \hline
+	0.6	& Dodani ostali zahtjevi & Paula Močinić  & 13.11.2023	\\ \hline
 	
 \end{longtblr}
 
