--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -1,7 +1,7 @@
 
 \chapter{Specifikacija programske potpore}
 
-\subsection{Funkcionalni zahtjevi}
+\section{Funkcionalni zahtjevi}
 
 \subsection{Obrasci uporabe}
 
@@ -269,7 +269,7 @@
 \end{packed_item}
 
 
-\subsubsection{Dijagrami obrazaca uporabe}
+\subsection{Dijagrami obrazaca uporabe}
 
 
 % TODO: \usepackage{graphicx} required
@@ -330,9 +330,20 @@
 	\label{fig:uc2---rezervacija-parkiralista}
 \end{figure}
 
+\newpage
 
+\section{Ostali zahtjevi}
+	\begin{packed_item}
+		\item \text{Sustav treba omoguciti rad više korisnika u stvarnom vremenu}
+		\item \text{Korisnicko sučelje i sustav moraju podržavati hrvatsku abecedu (dijakritičke znakove) pri unosu i prikazu tekstualnog sadrzaja}
+		\item \text{Izvrsavanje dijela programa u kojem se pristupa bazi podataka ne smije trajati duže od nekoliko sekundi}
+		\item \text{Sustav treba biti implementiran kao web aplikacija koristeci objektno-orijentirane jezike}
+		\item \text{Sustav treba biti jednostavan za korištenje, korisnici se moraju znati koristiti sučeljem bez opširnih uputa }
+		\item \text{Sustav kao valutu koristi EURO}
+		\item \text{Veza s bazom podataka mora biti kvalitetno zastičena, brza i otporna na vanjske greške}
+		\item \text{Pristup sustavu mora biti omogucen iz javne mreže pomoću HTTPS}
+	\end{packed_item}
 
-\subsection{Obrasci uporabe}
 
 
 \eject
