--- a/Dokumentacija/Opis_projektnog_zadatka.tex
+++ b/Dokumentacija/Opis_projektnog_zadatka.tex
@@ -3,7 +3,8 @@
 %\textbf{\textit{dio 1. revizije}}\\
 
 {Cilj ovog projekta je razviti programsku podršku za stvaranje web aplikacije "SpotPicker" koji će omogučiti rezervaciju, naplatu parkiranja i pregled slobodnih parkirališnih mjesta za automobile i bicikle. }
-{Neregistrirani korisnik može poslati zahtjev za registraciju sa željenom ulogom za koju se prijavljuje (voditelj parkinga ili klijent), a potrebni su: }
+\paragraph*{}{Ovakva aplikacija za rezerviranje parkinga pruža niz koristi kako vozačima, tako i vlasnicima parkirališta. Vozači često gube vrijeme tražeći slobodna parkirališta, pogotovo u gusto naseljenim područjima ili tijekom gužvi. Aplikacija za rezerviranje parkinga im omogućuje da unaprijed rezerviraju svoje mjesto, čime se smanjuje potreba za traženjem parkirnog prostora i eliminira stres povezan s time. Također rezervacija pruža vozačima sigurnost i garanciju parkirnog prostora kad stignu na odredište. To je posebno korisno tijekom raznih događanja, koncerata illi sportskih manifestacija, kada je potražnja za parkirnim mjestima visoka. S druge strane vlasnici parkirališta mogu bolje upravljati svojim resursima koristeći informacije o rezervacijama. Aplikacija omogućuje praćenje popunjenosti parkirališta, što pomaže u planiranju i optimizaciji korištenja prostora. Ovo može rezultirati boljim iskorištavanjem kapaciteta parkirališta, povećanjem prihoda i poboljšanjem općeg iskustva korisnika.}
+\paragraph*{}{Neregistrirani korisnik može poslati zahtjev za registraciju sa željenom ulogom za koju se prijavljuje (voditelj parkinga ili klijent), a potrebni su: }
 \begin{packed_item}
 	\item {korisničko ime}
 	\item {lozinka}
