Uređivanje Opisa projektnog zadatka

--- a/Dokumentacija/Opis_projektnog_zadatka.tex
+++ b/Dokumentacija/Opis_projektnog_zadatka.tex
@@ -4,6 +4,11 @@
 
 {Cilj ovog projekta je razviti programsku podršku za stvaranje web aplikacije "SpotPicker" koji će omogučiti rezervaciju, naplatu parkiranja i pregled slobodnih parkirališnih mjesta za automobile i bicikle. }
 \paragraph*{}{Ovakva aplikacija za rezerviranje parkinga pruža niz koristi kako vozačima, tako i vlasnicima parkirališta. Vozači često gube vrijeme tražeći slobodna parkirališta, pogotovo u gusto naseljenim područjima ili tijekom gužvi. Aplikacija za rezerviranje parkinga im omogućuje da unaprijed rezerviraju svoje mjesto, čime se smanjuje potreba za traženjem parkirnog prostora i eliminira stres povezan s time. Također rezervacija pruža vozačima sigurnost i garanciju parkirnog prostora kad stignu na odredište. To je posebno korisno tijekom raznih događanja, koncerata illi sportskih manifestacija, kada je potražnja za parkirnim mjestima visoka. S druge strane vlasnici parkirališta mogu bolje upravljati svojim resursima koristeći informacije o rezervacijama. Aplikacija omogućuje praćenje popunjenosti parkirališta, što pomaže u planiranju i optimizaciji korištenja prostora. Ovo može rezultirati boljim iskorištavanjem kapaciteta parkirališta, povećanjem prihoda i poboljšanjem općeg iskustva korisnika.}
+\paragraph*{}{Kako bi se ovo postignulo, stranica mora biti pregledna, razumljiva i korisnicima lako dostupna. Do svega na stranici trebalo bi moći doći u samo nekoliko klikova. Sučelje mora biti vizualno atraktivno i jednostavno za korištenje. KOrisniku moraju biti lako dostupne i vidljive sve najvažnije informacije o pojedinom parkingu: koliko je mjesta slobodno na pojedinom parkingu, njena cijena i moguća ograničenja vezana uz vozila.}
+\paragraph*{}{Posebnu pažnju trebalo bi posvetiti i orginalnosti web stranice kako bi se naša imala po čemu istaknuti u usporedbi s konkurencijom i time privući više korisnika. Također tada bi i više parkirališta moglo odabrati našu stranicu za rezervaciju i naplatu parkinga.}
+\paragraph*{}{Koristi od stranice imat će prvenstveno kupci, jer je izgradnja stranice usmjerena njima kao najbrojnijoj skupini korisnika. Nadalje, najveću korist imat će voditelji parkirališta kojima će stranica omogućiti ostvarenje većeg profita. Stranica će im poslužiti kao oblik oglašavanja te će im olakšati nalaženje kupaca. Time će im se povećati konkurentnost na tržištu.}
+\paragraph*{}{
+Korisnike stranice smo podijelili na više skupina. To su administratori, voditelji parkinga, registrirani korisnici ili klijenti i neregistrirani korisnici.}
 \paragraph*{}{Neregistrirani korisnik može poslati zahtjev za registraciju sa željenom ulogom za koju se prijavljuje (voditelj parkinga ili klijent), a potrebni su: }
 \begin{packed_item}
 	\item {korisničko ime}
@@ -14,7 +19,6 @@
 	\item {IBAN}
 	\item {email adresa}
 \end{packed_item}
-
 \paragraph*{}Administrator može vidjeti popis svih registriranih korisnika i njihovih osobnih podataka te im mijenjati osobne podatke. Registracija se završava potvrdom preko email adrese. a ako se korisnik registrirao kao voditelj dodatno ga mora potvrditi administrator.
 \paragraph*{}{Voditelj parkinga ima mogućnost unijeti informacije o svom parkiralištu (naziv, opis, fotografija, cjenik i sl.) i u kartu ucrtati svako dostupno parkirališno mjesto za to parkiralište. Voditelj definira je li moguće rezervirati parkirališno mjesto te postavlja senzor koji osvježava informaciju o zauzetosti parkirališnog mjesta.}
 \paragraph*{}{Neregistrirani korisnici u aplikaciji mogu pregledati sva parkirališta i parkirališna mjesta koja su dostupna, dok se klijentima (prijavljenim korisnicima) dodatno prikazuje informacija o njihovoj zauzetosti u stvarnom vremenu.}
