Ispravljeno postavljanje sekvencijskih dijagrama
Ispravljeno postavljanje sekvencijskih dijagrama tako da budu na istoj stranici kao i tekst uz koji bi trebali biti.

--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -311,10 +311,8 @@
 
 \textit{Klijent šalje zahtjev za prikaz kartografskog prikaza s dostupnim parkiralištima kako bi odabrao parkiralište.Aplikacija dohvaća trenutne podatke o svim parkiralištima iz baze podataka i prikazuje ih korisniku.Nakon što klijent odabere parkiralište na karti, aplikacija šalje upit bazi podataka kako bi dohvatila osnovne informacije o odabranom parkiralištu.Baza podataka odgovara na upit i šalje informacije o parkiralištu i zauzetosti parkirališnih mjesta, što aplikacija prikazuje korisniku.}
 
-\newpage
-
 % TODO: \usepackage{graphicx} required
-\begin{figure}
+\begin{figure}[!htb]
 	\centering
 	\includegraphics[width=1\linewidth]{"dijagrami/UC1 - Pregled dostupnih parkirališta"}
 	\caption{Sekvencijski dijagram za UC1}
