--- a/Dokumentacija/PROGI_2023_LETECI_MEDVJEDICI_v1_0.tex
+++ b/Dokumentacija/PROGI_2023_LETECI_MEDVJEDICI_v1_0.tex
@@ -108,7 +108,7 @@
 				
 				\vspace*{\stretch{4.0}}
 				
-				Nastavnik: \textit{$<$Ime i prezime nastavnika zaduženog za vašu grupu$>$}\\
+				Nastavnik: \textit{Hrvoje Nuić, mag. ing.}\\
 				
 			\end{center}
 			
