--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -216,14 +216,14 @@
 		\item[2.a] Administrator pokušava izmijeniti podatke korisnika na nedozvoljen način.
 		\item[] \begin{packed_enum}
 			
-			\item Sustav obavještava administratora o neispravnoj izmjeni podataka i onemogućava ju.s
+			\item Sustav obavještava administratora o neispravnoj izmjeni podataka i onemogućava ju.
 			
 		\end{packed_enum}
 		
 	\end{packed_item}
 	
 \end{packed_item}
-
+\newpage
 \noindent \underbar{\textbf{UC6 - Prikaz parkirališta za bicikle}}
 \begin{packed_item}
 	
@@ -286,7 +286,7 @@
 	\end{packed_item}
 	
 \end{packed_item}
-
+\newpage
 \noindent \underbar{\textbf{UC8 - Registracija}}
 \begin{packed_item}
 	
@@ -303,7 +303,6 @@
 		\item Korisnik prima obavijest o uspjesnoj registraciji
 		
 	\end{packed_enum}
-	\newpage
 		\item  \textbf{Opis mogućih odstupanja:}
 	\item[] \begin{packed_item}
 		
@@ -376,7 +375,7 @@
 
 
 % TODO: \usepackage{graphicx} required
-\begin{figure}
+\begin{figure}[!htb]
 	\centering
 	\includegraphics[width=1\linewidth]{"dijagrami/UC2 - Rezervacija Parkirališta"}
 	\caption{Sekvencijski dijagram za UC2}
