--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -149,6 +149,13 @@ Navedeni je entitet u vezi \emph{One-to-One} s entitetom Korisnik preko atributa
 
 \subsection{Dijagram baze podataka}
 
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=1\linewidth]{dijagrami/ERdijagramPROGI.png}
+	\caption{ ER dijagram baze podataka}
+	\label{fig:dijagramklijent}
+\end{figure}
+
 \section{Dijagram razreda i opis razreda}
 
 
